# Learning_ROS_for_Robotics_Programming_2nd_edition

./: README.md  contributors.txt
chapter10_tutorials/: LICENSE  (+1 more)
chapter10_tutorials/chapter10_tutorials/: CMakeLists.txt  package.xml
chapter10_tutorials/rosbook_arm_bringup/: CMakeLists.txt  package.xml
chapter10_tutorials/rosbook_arm_bringup/config/: approach_planner.yaml  rosbook_arm_motions.yaml
chapter10_tutorials/rosbook_arm_bringup/launch/: play_motion.launch  rosbook_arm_bringup.launch
chapter10_tutorials/rosbook_arm_controller_configuration/: CMakeLists.txt  package.xml
chapter10_tutorials/rosbook_arm_controller_configuration/launch/: default_controllers.launch
chapter10_tutorials/rosbook_arm_description/: CMakeLists.txt  package.xml
chapter10_tutorials/rosbook_arm_description/config/: joint_limits.yaml
chapter10_tutorials/rosbook_arm_description/gazebo/: gazebo.urdf.xacro
chapter10_tutorials/rosbook_arm_description/robots/: rosbook_arm_base.urdf.xacro  rosbook_arm_rgbd.urdf.xacro  upload_rosbook_arm.launch
chapter10_tutorials/rosbook_arm_description/urdf/: deg_to_rad.xacro  inertia.xacro  materials.urdf.xacro
chapter10_tutorials/rosbook_arm_gazebo/: CMakeLists.txt  package.xml
chapter10_tutorials/rosbook_arm_gazebo/launch/: rosbook_arm_empty_world.launch  rosbook_arm_gazebo.launch  rosbook_arm_grasping_world.launch  rosbook_arm_spawn.launch
chapter10_tutorials/rosbook_arm_gazebo/worlds/: empty.world  grasping.world
chapter10_tutorials/rosbook_arm_hardware_gazebo/: CMakeLists.txt  package.xml  rosbook_arm_hardware_gazebo_plugins.xml
chapter10_tutorials/rosbook_arm_hardware_gazebo/src/: rosbook_arm_hardware_gazebo.cpp
chapter10_tutorials/rosbook_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
chapter10_tutorials/rosbook_arm_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  ompl_planning.yaml  rosbook_arm.srdf  sensors_rgbd.yaml
chapter10_tutorials/rosbook_arm_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  rosbook_arm_moveit_controller_manager.launch.xml  rosbook_arm_moveit_sensor_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
chapter10_tutorials/rosbook_arm_pick_and_place/: CMakeLists.txt  package.xml
chapter10_tutorials/rosbook_arm_pick_and_place/config/: rosbook_arm_grasp_data.yaml
chapter10_tutorials/rosbook_arm_pick_and_place/launch/: grasp_generator_server.launch
chapter10_tutorials/rosbook_arm_pick_and_place/scripts/: pick_and_place.py
chapter10_tutorials/rosbook_arm_snippets/: CMakeLists.txt  package.xml
chapter10_tutorials/rosbook_arm_snippets/src/: move_group_add_object.cpp  move_group_plan_random_target.cpp  move_group_plan_single_target.cpp  move_group_remove_object.cpp
chapter2_tutorials/: CMakeLists.txt  package.xml
chapter2_tutorials/cfg/: chapter2.cfg
chapter2_tutorials/launch/: chapter2.launch
chapter2_tutorials/msg/: chapter2_msg1.msg
chapter2_tutorials/src/: example1_a.cpp  example1_b.cpp  example2_a.cpp  example2_b.cpp  example3_a.cpp  example3_b.cpp  example4.cpp
chapter2_tutorials/srv/: chapter2_srv1.srv
chapter3_tutorials/: CMakeLists.txt  package.xml
chapter3_tutorials/bag/: 2014-07-01-22-54-34.bag
chapter3_tutorials/cfg/: DynamicParam.cfg
chapter3_tutorials/config/: bag_plot.perspective  chapter3_tutorials.config  diagnostic_aggregator.yaml  example10.rviz  example9.rviz  example_tf.rviz
chapter3_tutorials/launch/: example1.launch  example10.launch  example1_gdb.launch  example1_valgrind.launch  example2.launch  example3.launch  example4_5.launch  example4_record.launch  example6.launch  example7.launch  example8.launch  example9.launch
chapter3_tutorials/output/: gdb_run_node_example1.txt
chapter3_tutorials/src/: example1.cpp  example10.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8.cpp  example9.cpp
chapter3_tutorials/srv/: SetSpeed.srv
chapter5_tutorials/: CMakeLists.txt  package.xml
chapter5_tutorials/bag/viso2_demo/: download_amphoras_pool_bag_files.sh
chapter5_tutorials/cfg/: Camera.cfg  CameraStereo.cfg  Homography.cfg
chapter5_tutorials/config/: chapter5_tutorials.config
chapter5_tutorials/config/camera/: calibration_webcam.yaml  webcam.yaml
chapter5_tutorials/config/camera_stereo/: disparity.yaml  logitech_c120.yaml  logitech_c120_left.yaml  logitech_c120_right.yaml  rviz.vcg  rviz_odometry.vcg
chapter5_tutorials/launch/: camera.launch  camera_polling.launch  camera_stereo.launch  camera_timer.launch  firewire_camera.launch  fovis_demo.launch  fovis_hw_registered.launch  fovis_no_registered.launch  fovis_sw_registered.launch  gscam.launch  homography.launch  openni_kinect_hw_registered.launch  openni_kinect_no_registered.launch  openni_kinect_sw_registered.launch  usb_cam.launch  viso2_demo.launch
chapter5_tutorials/src/: camera.cpp  camera_polling.cpp  camera_stereo.cpp  camera_timer.cpp  homography.cpp
chapter6_tutorials/: CMakeLists.txt  package.xml
chapter6_tutorials/data/: write_pcd_test.pcd
chapter6_tutorials/src/: pcl_create.cpp  pcl_downsampling.cpp  pcl_filter.cpp  pcl_matching.cpp  pcl_model_estimation.cpp  pcl_partitioning.cpp  pcl_planar_segmentation.cpp  pcl_read.cpp  pcl_visualize.cpp  pcl_visualize2.cpp  pcl_write.cpp
chapter7_tutorials/robot1_description/: CMakeLists.txt  package.xml  urdf.rviz
chapter9_tutorials/: CMakeLists.txt  package.xml
chapter9_tutorials/launch/: base_local_planner_params.yaml  chapter9_configuration_gazebo.launch  costmap_common_params.yaml  display.vcg  global_costmap_params.yaml  local_costmap_params.yaml  move_base.launch  navigation.rviz  navigation.vcg
chapter9_tutorials/maps/: map.yaml
chapter9_tutorials/src/: sendGoals.cpp
(+90 files in other folders)
