<?xml version="1.0"?>
<package>
  <name>rosbook_arm_bringup</name>
  <version>0.0.0</version>
  <description>Bring up ROS book arm</description>

  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
  <author email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rosbook_arm_moveit_config</run_depend>
  <run_depend>rosbook_arm_controller_configuration</run_depend>
  <run_depend>rosbook_arm_description</run_depend>
  <run_depend>play_motion</run_depend>
</package>
