<?xml version="1.0"?>
<package>
  <name>rosbook_arm_moveit_config</name>
  <version>0.0.0</version>
  <description>ROS book arm MoveIt! configuration</description>

  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
  <author email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rosbook_arm_description</run_depend>
  <run_depend>xacro</run_depend>
</package>
